Ditch `uv` until `actions/setup-python` gets support

--- a/.github/actions/run-backend-tests/action.yml
+++ b/.github/actions/run-backend-tests/action.yml
@@ -51,11 +51,6 @@ runs:
               cache-dependency-path: '**/requirements*.txt'
               token: ${{ inputs.token }}
 
-        # uv is a fast pip alternative: https://github.com/astral-sh/uv/
-        - name: Install uv
-          shell: bash
-          run: pip install uv
-
         - name: Determine if hogql-parser has changed compared to master
           shell: bash
           id: hogql-parser-diff
@@ -90,7 +85,7 @@ runs:
         - name: Install Python dependencies
           shell: bash
           run: |
-              uv pip install --system -r requirements.txt -r requirements-dev.txt
+              pip install --system -r requirements.txt -r requirements-dev.txt
 
         - name: Install the working version of hogql-parser
           if: steps.hogql-parser-diff.outputs.changed == 'true'
@@ -116,7 +111,7 @@ runs:
               sudo cp out/usr/local/lib/libantlr4-runtime.so* /usr/lib/
               sudo ldconfig
               cd ..
-              uv pip install --system ./hogql_parser
+              pip install --system ./hogql_parser
 
         - name: Set up needed files
           shell: bash
