--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -112,9 +112,6 @@ jobs:
                   cache-dependency-path: '**/requirements*.txt'
                   token: ${{ secrets.POSTHOG_BOT_GITHUB_TOKEN }}
 
-            # uv is a fast pip alternative: https://github.com/astral-sh/uv/
-            - run: pip install uv
-
             - name: Install SAML (python3-saml) dependencies
               run: |
                   sudo apt-get update
@@ -122,7 +119,7 @@ jobs:
 
             - name: Install Python dependencies
               run: |
-                  uv pip install --system -r requirements.txt -r requirements-dev.txt
+                  pip install --system -r requirements.txt -r requirements-dev.txt
 
             - name: Check for syntax errors, import sort, and code style violations
               run: |
@@ -189,9 +186,6 @@ jobs:
                   cache-dependency-path: '**/requirements*.txt'
                   token: ${{ secrets.POSTHOG_BOT_GITHUB_TOKEN }}
 
-            # uv is a fast pip alternative: https://github.com/astral-sh/uv/
-            - run: pip install uv
-
             - name: Install SAML (python3-saml) dependencies
               run: |
                   sudo apt-get update
@@ -199,7 +193,7 @@ jobs:
 
             - name: Install python dependencies
               run: |
-                  uv pip install --system -r requirements.txt -r requirements-dev.txt
+                  pip install --system -r requirements.txt -r requirements-dev.txt
 
             - uses: actions/checkout@v3
               with:
@@ -209,7 +203,7 @@ jobs:
               run: |
                   # We need to ensure we have requirements for the master branch
                   # now also, so we can run migrations up to master.
-                  uv pip install --system -r requirements.txt -r requirements-dev.txt
+                  pip install --system -r requirements.txt -r requirements-dev.txt
                   python manage.py migrate
 
             - uses: actions/checkout@v3
@@ -340,9 +334,6 @@ jobs:
                   cache-dependency-path: '**/requirements*.txt'
                   token: ${{ secrets.POSTHOG_BOT_GITHUB_TOKEN }}
 
-            # uv is a fast pip alternative: https://github.com/astral-sh/uv/
-            - run: pip install uv
-
             - name: Install SAML (python3-saml) dependencies
               run: |
                   sudo apt-get update
@@ -351,7 +342,7 @@ jobs:
             - name: Install python dependencies
               shell: bash
               run: |
-                  uv pip install --system -r requirements.txt -r requirements-dev.txt
+                  pip install --system -r requirements.txt -r requirements-dev.txt
 
             - name: Add kafka host to /etc/hosts for kafka connectivity
               run: sudo echo "127.0.0.1 kafka" | sudo tee -a /etc/hosts
