--- a/.github/workflows/ci-plugin-server.yml
+++ b/.github/workflows/ci-plugin-server.yml
@@ -122,9 +122,6 @@ jobs:
                   cache-dependency-path: '**/requirements*.txt'
                   token: ${{ secrets.POSTHOG_BOT_GITHUB_TOKEN }}
 
-            # uv is a fast pip alternative: https://github.com/astral-sh/uv/
-            - run: pip install uv
-
             - name: Install SAML (python3-saml) dependencies
               if: needs.changes.outputs.plugin-server == 'true'
               run: |
@@ -134,8 +131,8 @@ jobs:
             - name: Install python dependencies
               if: needs.changes.outputs.plugin-server == 'true'
               run: |
-                  uv pip install --system -r requirements-dev.txt
-                  uv pip install --system -r requirements.txt
+                  pip install --system -r requirements-dev.txt
+                  pip install --system -r requirements.txt
 
             - name: Install pnpm
               if: needs.changes.outputs.plugin-server == 'true'
@@ -216,9 +213,6 @@ jobs:
                   cache-dependency-path: '**/requirements*.txt'
                   token: ${{ secrets.POSTHOG_BOT_GITHUB_TOKEN }}
 
-            # uv is a fast pip alternative: https://github.com/astral-sh/uv/
-            - run: pip install uv
-
             - name: Install SAML (python3-saml) dependencies
               run: |
                   sudo apt-get update
@@ -226,8 +220,8 @@ jobs:
 
             - name: Install python dependencies
               run: |
-                  uv pip install --system -r requirements-dev.txt
-                  uv pip install --system -r requirements.txt
+                  pip install --system -r requirements-dev.txt
+                  pip install --system -r requirements.txt
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
