--- a/.github/workflows/build-hogql-parser.yml
+++ b/.github/workflows/build-hogql-parser.yml
@@ -85,7 +85,7 @@ jobs:
               run: cd hogql_parser && python setup.py sdist
 
             - name: Install cibuildwheel
-              run: pip install --system cibuildwheel==2.16.*
+              run: pip install cibuildwheel==2.16.*
 
             - name: Build wheels
               run: cd hogql_parser && python -m cibuildwheel --output-dir dist
