--- a/.github/workflows/ci-plugin-server.yml
+++ b/.github/workflows/ci-plugin-server.yml
@@ -131,8 +131,8 @@ jobs:
             - name: Install python dependencies
               if: needs.changes.outputs.plugin-server == 'true'
               run: |
-                  pip install --system -r requirements-dev.txt
-                  pip install --system -r requirements.txt
+                  pip install -r requirements-dev.txt
+                  pip install -r requirements.txt
 
             - name: Install pnpm
               if: needs.changes.outputs.plugin-server == 'true'
@@ -220,8 +220,8 @@ jobs:
 
             - name: Install python dependencies
               run: |
-                  pip install --system -r requirements-dev.txt
-                  pip install --system -r requirements.txt
+                  pip install -r requirements-dev.txt
+                  pip install -r requirements.txt
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
